# jed

./: .coverage  .flake8  Dockerfile  README.md  pipper.json  pyproject.toml
.github/workflows/: ci.yml
jed/: jobber.py  jobs.py  tabler.py  utils.py
jed/test/: test_jobber.py  test_jobs.py  test_tabler.py  test_utils.py
