[tool.poetry]
name = "jed"
version = "0.1.0"
description = "This library aids with civis interactions"
authors = ["anissa.mike <anissa.mike@cleanchoiceenergy.com>"]
readme = "README.md"
repository = "github.com/cleanchoiceenergy/jed"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
civis = "^1.16.0"
Jinja2 = "^3.1.2"
json5 = "^0.9.10"
jsonschema = "^4.16.0"
jupyter = "^1.0.0"
jupyterlab = "^3.5"
Markdown = "^3.4.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
pipper = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-black = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-runner = "*"
taskipy = "*"

[tool.taskipy.tasks]
black = "black ."
flake = "flake8 ."
mypy = "mypy . --ignore-missing-imports"
pytest = "pytest . --cov-report term-missing --cov=."
lint = "task black && task flake && task mypy"
check = "task black && task flake && task pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"